--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         tools:context=".ui.SignUpActivity">
+
         <ImageView
             android:id="@+id/img_profile"
             android:layout_width="150dp"
@@ -25,14 +26,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
             app:boxBackgroundMode="outline"
             app:boxCornerRadiusBottomEnd="10dp"
             app:boxCornerRadiusBottomStart="10dp"
             app:boxCornerRadiusTopEnd="10dp"
             app:boxCornerRadiusTopStart="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_profile">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -166,50 +167,40 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layour_state"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <com.cvaghela.spinner.searchablespinner.SearchableSpinner
+            android:id="@+id/spinner_state"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusBottomEnd="10dp"
-            app:boxCornerRadiusBottomStart="10dp"
-            app:boxCornerRadiusTopEnd="10dp"
-            app:boxCornerRadiusTopStart="10dp"
+            android:layout_margin="5dp"
+            android:gravity="center_horizontal"
+            app:DropDownMainTextColor="@color/black"
+            app:DropDownViewCornerRadius="5dp"
+            app:MainEntryText="State"
+            app:SearchHintText="Search State"
+            app:SearchViewBackgroundColor="@color/white"
+            app:SearchViewHintColor="@color/black"
+            app:SearchViewTextColor="@color/black"
+            app:SpinnerExpandHeight="200dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layour_email">
+            app:layout_constraintTop_toBottomOf="@+id/layour_email" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_state"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:hint="State"
-                android:maxLines="1" />
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layour_district"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <com.cvaghela.spinner.searchablespinner.SearchableSpinner
+            android:id="@+id/spinner_district"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusBottomEnd="10dp"
-            app:boxCornerRadiusBottomStart="10dp"
-            app:boxCornerRadiusTopEnd="10dp"
-            app:boxCornerRadiusTopStart="10dp"
+            android:layout_margin="5dp"
+            android:gravity="center_horizontal"
+            app:DropDownMainTextColor="@color/black"
+            app:DropDownViewCornerRadius="5dp"
+            app:MainEntryText="District"
+            app:SearchHintText="Search District"
+            app:SearchViewBackgroundColor="@color/white"
+            app:SearchViewHintColor="@color/black"
+            app:SearchViewTextColor="@color/black"
+            app:SpinnerExpandHeight="200dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layour_state">
+            app:layout_constraintTop_toBottomOf="@+id/spinner_state" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_district"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:hint="District"
-                android:maxLines="1" />
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layour_pin_code"
@@ -223,7 +214,7 @@
             app:boxCornerRadiusTopEnd="10dp"
             app:boxCornerRadiusTopStart="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layour_district">
+            app:layout_constraintTop_toBottomOf="@+id/spinner_district">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_pin_code"
@@ -256,6 +247,7 @@
                 android:hint="City Name"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layour_password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -279,6 +271,7 @@
                 android:inputType="textPassword"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layour_confim_password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -302,6 +295,7 @@
                 android:inputType="textPassword"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/bt_signup"
             android:layout_width="200dp"
