--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -106,7 +106,7 @@
                     android:layout_weight="2"
                     android:fontFamily="sans-serif-medium"
                     android:text="@string/signup"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:textAlignment="textStart"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
